   - SRv6 Tunnel Protocol
     * Added support for userspace datapath (only).
   - Userspace datapath:
     * Implementation of OpenFlow meters is now lockless allowing for better
       multi-thread scalability.
     * IP and L4 checksum offload support is now enabled by default for
       interfaces that support it.  See the 'status' column in the 'interface'
       table to check the status.


v3.1.0 - 16 Feb 2023
--------------------
   - ovs-vswitchd now detects changes in CPU affinity and adjusts the number
     of handler and revalidator threads if necessary.
   - AF_XDP:
     * Added support for building with libxdp and libbpf >= 0.7.
     * Support for AF_XDP is now enabled by default if all dependencies are
       available at the build time.  Use --disable-afxdp to disable.
       Use --enable-afxdp to fail the build if dependencies are not present.
   - ovs-appctl:
     * "ovs-appctl ofproto/trace" command can now display port names with the
       "--names" option.
   - OVSDB-IDL:
     * Add the support to specify the persistent uuid for row insert in both
       C and Python IDLs.
   - Windows:
     * Conntrack IPv6 fragment support.
   - DPDK:
     * Add support for DPDK 22.11.1.
   - For the QoS max-rate and STP/RSTP path-cost configuration OVS now assumes
     10 Gbps link speed by default in case the actual link speed cannot be
     determined.  Previously it was 10 Mbps.  Values can still be overridden
     by specifying 'max-rate' or '[r]stp-path-cost' accordingly.
   - OpenFlow:
     * New OpenFlow extension NXT_CT_FLUSH to flush connections matching
       the specified fields.
   - ovs-ctl:
     * New option '--dump-hugepages' to include hugepages in core dumps. This
       can assist with postmortem analysis involving DPDK, but may also produce
       significantly larger core dump files.
   - ovs-dpctl and 'ovs-appctl dpctl/' commands:
     * 'flush-conntrack' is now capable of handling partial 5-tuple,