@@ -44,6 +44,8 @@ Post-v3.1.0
      * IP and L4 checksum offload support is now enabled by default for
        interfaces that support it.  See the 'status' column in the 'interface'
        table to check the status.
+   - Linux TC offload:
+     * Add support for offloading VXLAN tunnels with the GBP extensions.
 
 
 v3.1.0 - 16 Feb 2023
